WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
254561
[IFC] Fix imported/w3c/web-platform-tests/css/css-text/text-indent/text-indent-with-absolute-pos-child.html
https://bugs.webkit.org/show_bug.cgi?id=254561
Summary
[IFC] Fix imported/w3c/web-platform-tests/css/css-text/text-indent/text-inden...
alan
Reported
2023-03-27 18:19:01 PDT
ssia
Attachments
[fast-cq]Patch
(4.16 KB, patch)
2023-03-27 18:25 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2023-03-27 18:25:47 PDT
Created
attachment 465623
[details]
[fast-cq]Patch
EWS
Comment 2
2023-03-28 07:44:46 PDT
Committed
262211@main
(eda7c8257fb4): <
https://commits.webkit.org/262211@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 465623
[details]
.
Radar WebKit Bug Importer
Comment 3
2023-03-28 11:56:46 PDT
<
rdar://problem/107328013
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug