[IFC] Fix imported/w3c/web-platform-tests/css/css-text/text-indent/text-indent-with-absolute-pos-child.html https://bugs.webkit.org/show_bug.cgi?id=254561

Reviewed by Antti Koivisto.

This is in preparation for supporting out-of-flow/float content only. In such cases text-indent needs to know that there's no line at all in this block container.

* Source/WebCore/layout/formattingContexts/inline/InlineFormattingGeometry.cpp:
(WebCore::Layout::InlineFormattingGeometry::contentLeftAfterLastLine const):
(WebCore::Layout::InlineFormattingGeometry::staticPositionForOutOfFlowInlineLevelBox const):
* Source/WebCore/layout/formattingContexts/inline/InlineFormattingGeometry.h:

Canonical link: https://commits.webkit.org/262211@main