Source/WebCore/layout/formattingContexts/inline/InlineFormattingGeometry.h
@@ -65,7 +65,7 @@ public:
     InlineLayoutUnit horizontalAlignmentOffset(InlineLayoutUnit horizontalAvailableSpace, IsLastLineOrAfterLineBreak, std::optional<TextDirection> inlineBaseDirectionOverride = std::nullopt) const;
 
 private:
-    InlineLayoutUnit contentLeftAfterLastLine(const ConstraintsForInFlowContent&, InlineLayoutUnit lastLineLogicalBottom, const FloatingContext&) const;
+    InlineLayoutUnit contentLeftAfterLastLine(const ConstraintsForInFlowContent&, std::optional<InlineLayoutUnit> lastLineLogicalBottom, const FloatingContext&) const;
 
     const InlineFormattingContext& formattingContext() const { return downcast<InlineFormattingContext>(FormattingGeometry::formattingContext()); }
 
